# Enhanced-Cognee

./: .dockerignore  .enhanced-cognee-config.json  .env.example  .env.production.template  .gitattributes  .gitguardian.yml  .gitignore  .graphifyignore  .pre-commit-config.yaml  100_PERCENT_IMPLEMENTATION_COMPLETE.md  AGENTS.md  ALL_58_MCP_TOOLS_VERIFIED.md  CLAUDE.md  CLAUDE_MEM_FEATURES_ANALYSIS.md  CODE_OF_CONDUCT.md  CODE_QUALITY_IMPROVEMENTS_COMPLETE.md  COGNEE_VS_ENHANCED_MCP_COMPARISON.md  COMPREHENSIVE_AUTOMATION_ANALYSIS.md  COMPREHENSIVE_UPDATE.md  CONTRIBUTING.md  Dockerfile  ENHANCED_COGNEE_AUDIT_REPORT.md  ENHANCED_SECURITY_TEST_RESULTS.md  FINAL_COMPLETION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  MCP_CONFIGURATION_SUMMARY.md  MCP_CONFIGURATION_SUMMARY_CORRECTED.md  MCP_IDE_SETUP_GUIDE.md  MCP_QUICK_REFERENCE.md  MCP_TOOLS_DOCUMENTATION.md  MCP_TOOLS_PRODUCTION_READY.md  MCP_TOOLS_REFERENCE_CORRECTED.md  MCP_UPDATE_COMPLETION_REPORT.md  Makefile  NOTICE  PHASE_2_COMPLETION_REPORT.md  PHASE_2_QUICK_START.md  PHASE_3_QUICK_START.md  PRODUCTION_IMPLEMENTATION_COMPLETE.md  README - Copy (2).md  (+39 more)
.claude/: settings.local.json
.dlt/: secrets.toml
.github/: dependabot.yml
.kilocode/: mcp.json
.upstream-sync/: sync-metadata.json
alembic_enhanced/: env.py
benchmarks/: benchmark_all_tools.py
clients/: README.md
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: integration.rs
config/: README.md  alert_rules.yaml  security_config.yaml
dashboard/: Dockerfile.api  PHASE_4_COMPLETION_REPORT.md  README.md  dashboard_api.py  docker-compose-dashboard.yml  requirements-api.txt
docker/: Dockerfile.enhanced-cognee  Dockerfile.production  docker-compose-enhanced-cognee.yml  docker-compose-monitoring.yml  docker-compose-production.yml  postgresql18.conf
docs/: ARCADEDB_MIGRATION.md  COGNEE_MCP_ANALYSIS.md  COGNEE_MCP_COMPLETE_GUIDE.md  COMMERCIALISATION_LICENSE_GUIDE.md  COMPARE_TO_ALTERNATIVES.md  Conducting Audit of the Entire Repository.docx  DEDUPLICATION_GUIDE.md  DEPLOYMENT_QUICKSTART.md  DISASTER_RECOVERY.md  EMERGENCY_RECOVERY.md  ENHANCED_COGNEE_STRATEGIC_PLAN.md  FEATURE_LICENSE_MATRIX.md  FRONTEND_QUICKSTART.md  HANDOVER.md  IMPLEMENTATION_GUIDE.md  LICENSE_AUDIT.md  MASTER_IMPLEMENTATION_PLAN.md  MONITORING.md  OUTSTANDING_ITEMS.md  PHASE5_TODO.md  PLUGGABLE_DB_BACKENDS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_PLAN.md  PROFILES.md  QUICK_START.md  README.md  README_PROPOSED_CHANGES.md  (+16 more)
enhanced_cognee_client/: __init__.py  client.py  exceptions.py  setup.cfg
sdk_pkg/: README.md  pyproject.toml
sdk_pkg/enhanced_cognee_client/: __init__.py  client.py
(+743 files in other folders)
