[metadata]
name = enhanced-cognee-client
version = 1.0.0
description = Python client for RNR Enhanced Cognee MCP server
author = Vincent S. Pereira
license = Apache-2.0

[options]
packages = enhanced_cognee_client
install_requires =
    httpx>=0.27.0

[options.package_data]
enhanced_cognee_client =
    py.typed
