[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced-cognee-client"
version = "1.0.0"
description = "Async Python client for the Enhanced Cognee MCP server (119 tools)"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Vincent S. Pereira", email = "vincyspereira@gmail.com"},
]
keywords = ["cognee", "mcp", "memory", "ai", "llm", "knowledge-graph"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/vincentspereira/Enhanced-Cognee"
Repository = "https://github.com/vincentspereira/Enhanced-Cognee"
"Bug Tracker" = "https://github.com/vincentspereira/Enhanced-Cognee/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["enhanced_cognee_client*"]

[tool.setuptools.package-data]
enhanced_cognee_client = ["py.typed"]
